multiple events added and responsiveness of other pages and deleting docs etc added

--- a/partials/services.ejs
+++ b/partials/services.ejs
@@ -6,24 +6,43 @@
     <div class="box-container">
 
         <div class="box">
-            <i class="fas fa-calendar-plus"></i>
-            <h3>Appointments</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, ab.</p>
-            <a href="#" class="btn">Learn More <span class="fas fa-angle-double-right"></span></a>
+
+            <div class="service-content-heading">
+                <i class="fas fa-calendar-plus"></i>
+                <h3>Appointments</h3>
+            </div>
+
+            <div class="service-content-description">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, ab.</p>
+                <a href="#" class="btn">Learn More <span class="fas fa-angle-double-right"></span></a>
+            </div>
+
         </div>
 
         <div class="box">
-            <i class="fas fa-file-medical"></i>
-            <h3>Prescription Management</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, ab.</p>
-            <a href="#" class="btn">Learn More <span class="fas fa-angle-double-right"></span></a>
+
+            <div class="service-content-heading">
+                <i class="fas fa-file-medical"></i>
+                <h3>Prescription Management</h3>
+            </div>
+
+            <div class="service-content-description">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, ab.</p>
+                <a href="#" class="btn">Learn More <span class="fas fa-angle-double-right"></span></a>
+            </div>
         </div>
 
         <div class="box">
-            <i class="fas fa-capsules"></i>
-            <h3>Medicines List</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, ab.</p>
-            <a href="#" class="btn">Learn More <span class="fas fa-angle-double-right"></span></a>
+
+            <div class="service-content-heading">
+                <i class="fas fa-capsules"></i>
+                <h3>Medicines List</h3>
+            </div>
+
+            <div class="service-content-description">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, ab.</p>
+                <a href="#" class="btn">Learn More <span class="fas fa-angle-double-right"></span></a>
+            </div>
         </div>
 
     </div>
