--- a/partials/about.ejs
+++ b/partials/about.ejs
@@ -5,7 +5,7 @@
     <div class="row">
 
         <div class="image">
-            <img src="./images/home-img.svg" alt="about-us">
+            <img src="./images/take-care-of-good.svg" alt="about-us">
         </div>
 
         <div class="content">
