--- a/partials/navbar.ejs
+++ b/partials/navbar.ejs
@@ -1,33 +1,51 @@
 <nav class="nav">
 
-    <i class="fas fa-hamburger navOpenBtn"></i>
+    <i class="fas fa-align-justify navOpenBtn burger-icon"></i>
 
     <span class="logo">
         <i class="fas fa-hospital"></i>
         <a href="#"> CliniCare</a>
     </span>
 
-    <% if(typeof username === 'undefined') { %>
+    <% if(typeof username==='undefined' ) { %>
 
         <ul class="nav-links">
-            <i class="fas fa-plus-circle navCloseBtn"></i>
+            <i class="fas fa-times-circle navCloseBtn"></i>
             <li><a href="#">Home</a></li>
             <li><a href="#services">Services</a></li>
-            <li><a href="#about">About</a></li>        
+            <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact Us</a></li>
         </ul>
 
-    <% } else { %>
+        <% } else { %>
 
-        <ul class="nav-links">
-            <i class="fas fa-plus-circle navCloseBtn"></i>
-            <li><a href="/dashboard">Home</a></li>
-            <li><a href="/clinicadd" >Add Clinic</a></li>
-            <li><a href="/docadd" >Add Document</a></li>
-            <li><a href="/clinics" target="_blank">Clinics List</a></li>
-            <li><a href="/logout">Log Out</a></li>
-        </ul>
+            <ul class="nav-links">
+                <i class="fas fa-times-circle navCloseBtn"></i>
+                <li><a href="/dashboard">Home</a></li>
+                <li><a href="/clinicadd">Add Clinic</a></li>
+                <li><a href="/docadd">Add Document</a></li>
+                <li><a href="/clinics">Clinics List</a></li>
+                <li><a href="/logout">Log Out</a></li>
+            </ul>
 
-    <% } %>
-    
+            <% } %>
+
 </nav>
+
+<script>
+
+    const nav = document.querySelector(".nav"),
+        navOpenBtn = document.querySelector(".navOpenBtn"),
+        navCloseBtn = document.querySelector(".navCloseBtn");
+
+
+    navOpenBtn.addEventListener("click", () => {
+        nav.classList.add("openNav");
+    });
+
+
+    navCloseBtn.addEventListener("click", () => {
+        nav.classList.remove("openNav");
+    });
+
+</script>
