--- a/public/css/home.css
+++ b/public/css/home.css
@@ -32,6 +32,10 @@ section{
     padding: 4rem 5%;
 }
 
+section:nth-child(odd){
+    margin: 4rem 0;
+}
+
 section:nth-child(even){
     margin-top: 5rem;
     background: #ebe6f8;
@@ -145,15 +149,15 @@ section:nth-child(even){
 
 .home{
     display: flex;
+    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    text-align: center;
     padding-top: 8rem;
-    gap: 1.3rem;
 }
 
 .home .image{
     flex: 2;
-    padding-left: 5rem;
 }
 
 .home .image img{
@@ -169,23 +173,39 @@ section:nth-child(even){
     color: var(--black);
     line-height: 1.5;
     text-shadow: var(--text-shadow);
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 /* ------ services containers ------ */
+.services{
+    display: flex;
+    flex-direction: column;
+}
+
 .services .box-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
-    gap: 2rem;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 .services .box-container .box{
     background: #fff;
     box-shadow: var(--box-shadow);
     border-radius: .5rem;
-    padding: 2.5rem;
+    padding: 2rem;
     margin: 1.3rem;
     border: var(--border);
+}
+
+.services .box-container .box .service-content-heading{
+    display: flex;
+}
+
+.services .box-container .box .service-content-heading i{
+    margin-right: 1.2rem;
+}
+
+.services .box-container .box{
+    max-width: 400px;
 }
 
 .services .box-container .box h3{
@@ -267,9 +287,35 @@ section:nth-child(even){
 }
 
 /* ---- media query -----*/
+@media screen and (max-width: 1050px) {
+    .row,
+    .home{
+        flex-direction: column;
+    }
+
+    .home .image img {
+        width: 60%;
+        margin-bottom: 1.2rem;
+    }
+
+    .about .row .image img{
+        width: 80%;
+        margin-bottom: 2rem;
+    }
+}
+
 @media screen and (max-width: 475px) {
     .heading{
         font-size: 4rem;
         margin-top: 1rem;
+    }
+
+    .services .box-container .box .service-content-heading {
+        font-size: 0.8rem;
+    }
+
+    .services .box-container .box{
+        margin: 0;
+        padding: 1.3rem;
     }
 }
