--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -11,6 +11,11 @@
     z-index: 100;
 }
 
+.nav .burger-icon::before{
+    font-size: 1.2rem;
+    margin: 1rem;
+}
+
 .nav,
 .nav .nav-links {
     display: flex;
@@ -19,10 +24,7 @@
 
 .nav .nav-links li {
     margin-left: 2.8rem;
-}
-
-.nav .nav-links li:hover{
-    scale: 1.2;
+    font-size: 1.3rem;
 }
 
 .nav a,
@@ -58,11 +60,16 @@
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 780px) {
 
     .nav .navOpenBtn,
     .nav .navCloseBtn {
         display: block;
+    }
+
+    .nav.openNav .nav-links {
+        left: 0px;
+        top: -18px;
     }
 
     .nav .nav-links {
@@ -75,8 +82,8 @@
         padding-top: 100px;
         row-gap: 30px;
         flex-direction: column;
-        background-color: #11101d;
-        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        background-color: var(--blue);
+        box-shadow: 0 2px 10px rgba(32, 26, 94, 0.637);
         transition: all 0.4s ease;
         z-index: 100;
     }
