--- a/views/clinicadd.ejs
+++ b/views/clinicadd.ejs
@@ -27,63 +27,75 @@
     <!-- header section starts -->
     <%- include('../partials/navbar.ejs') -%>
 
-    <!-- Header section ends -->
+        <!-- Header section ends -->
 
-    <section class="book" id="book">
+        <section class="book" id="book">
 
-        <h3 class="heading"> <span> <i class="fas fa-briefcase-medical"></i> Add</span> Clinic</h3>
+            <h3 class="heading"> <span> <i class="fas fa-briefcase-medical"></i> Add</span> Clinic</h3>
 
-        <div class="row">
+            <div class="row">
 
-            <div class="image">
-                <img src="./images/add files.svg" alt="">
+                <form action="/clinicadd" method="POST">
+
+                    <h3 class="heading close-day-heading">
+                        <i class="fas fa-pen-alt"></i>
+                        Enter Cli<span>nic Details</span>
+                    </h3>
+
+                    <input type="text" name="clinic_name" placeholder="Enter Clinic's Name" class="box">
+
+                    <input type="text" name="doctor_name" placeholder="Enter Doctor's Name" class="box">
+
+                    <input type="text" name="phone_number" placeholder="Enter Phone Number" class="box">
+
+                    <input type="text" name="address" placeholder="Enter Address" class="box">
+
+                    <h4 class="heading close-day-heading">Closed <span>On</span></h4>
+
+                    <div class="days">
+
+                        <div class="each-day-input">
+                            <input type="checkbox" id="sunday" name="days" value="Sunday">
+                            <label for="sunday">Sunday</label>
+                        </div>
+
+                        <div class="each-day-input">
+                            <input type="checkbox" id="monday" name="days" value="Monday">
+                            <label for="monday">Monday</label>
+                        </div>
+
+                        <div class="each-day-input">
+                            <input type="checkbox" id="tuesday" name="days" value="Tuesday">
+                            <label for="tuesday">Tuesday</label>
+                        </div>
+
+                        <div class="each-day-input">
+                            <input type="checkbox" id="wednesday" name="days" value="Wednesday">
+                            <label for="wednesday">Wednesday</label>
+                        </div>
+
+                        <div class="each-day-input">
+                            <input type="checkbox" id="sunday" name="days" value="Thursday">
+                            <label for="thursday">Thursday</label>
+                        </div>
+
+                        <div class="each-day-input">
+                            <input type="checkbox" id="sunday" name="days" value="Friday">
+                            <label for="friday">Friday</label>
+                        </div>
+
+                        <div class="each-day-input">
+                            <input type="checkbox" id="sunday" name="days" value="Saturday">
+                            <label for="saturday">Saturday</label>
+                        </div>
+                    </div>
+
+                    <button type="submit" class="btn">Submit <span class="fas fa-angle-double-right"></span></button>
+
+                </form>
             </div>
 
-            <form action="/clinicadd" method="POST">
-
-                <h3 class="heading close-day-heading">Enter Cli<span>nic Details</span></h3>
-
-                <input type="text" name="clinic_name" placeholder="Enter Clinic's Name" class="box">
-
-                <input type="text" name="doctor_name" placeholder="Enter Doctor's Name" class="box">
-
-                <input type="text" name="phone_number" placeholder="Enter Phone Number" class="box">
-
-                <input type="text" name="address" placeholder="Enter Address" class="box">
-
-                <h4 class="heading close-day-heading">Closed <span>On</span></h4>
-
-                <div class="days">
-
-                    <input type="checkbox" id="sunday" name="days" value="Sunday">
-                    <label for="sunday">Sunday</label>
-
-                    <input type="checkbox" id="monday" name="days" value="Monday">
-                    <label for="monday">Monday</label>
-
-                    <input type="checkbox" id="tuesday" name="days" value="Tuesday">
-                    <label for="tuesday">Tuesday</label>
-
-
-                    <input type="checkbox" id="wednesday" name="days" value="Wednesday">
-                    <label for="wednesday">Wednesday</label>
-
-                    <input type="checkbox" id="sunday" name="days" value="Thursday">
-                    <label for="thursday">Thursday</label>
-
-                    <input type="checkbox" id="sunday" name="days" value="Friday">
-                    <label for="friday">Friday</label>
-
-                    <input type="checkbox" id="sunday" name="days" value="Saturday">
-                    <label for="saturday">Saturday</label>
-                </div>
-                
-                <button type="submit" class="btn">Submit <span class="fas fa-angle-double-right"></span></button>
-
-            </form>
-        </div>
-
-    </section>
+        </section>
 
 </body>
 
