--- a/views/clinics.ejs
+++ b/views/clinics.ejs
@@ -39,53 +39,55 @@
                 Clinics <span>List</span>
             </h1>
 
-            <div class="swiper slide-container">
+            <div class="container">
 
-                <div class="slide-content">
+                <% for(var i=0; i < clinics.length; i++) { %>
 
-                    <div class="swiper-wrapper card-wrapper">
+                    <div class="clinic">
 
-                        <% for(var i = 0; i < clinics.length; i++) { %>
+                        <div class="clinic-heading">
+                            <%= clinics[i].clinic_name %>
+                        </div>
 
-                            <div class="swiper-slide clinic">
-                                <div class="clinic-heading">
-                                     <%= clinics[i].clinic_name %> 
-                                </div>
-    
-                                <div class="clinic-content">
+                        <div class="clinic-content">
 
-                                    <div class="doc-name">
-                                        <span><i class="fas fa-user-nurse clinic-icon"></i> Doctor : <span
-                                                class="each-content">
-                                                <%= clinics[i].doctor_name %> </span>
-                                    </div>
-
-                                    <div class="phone-number">
-                                        <span><i class="fas fa-phone clinic-icon"></i> Phone Number : <span
-                                                class="each-content">
-                                                <%= clinics[i].phone_number %></span></span>
-                                    </div>
-                                    
-                                    <div class="address">
-                                        <span><i class="fas fa-clinic-medical clinic-icon"></i> Address : <span
-                                                class="each-content"> <%= clinics[i].address %></span></span>
-                                    </div>
-                                    <div class="close-day">
-                                        <span><i class="fas fa-window-close clinic-icon"></i> Closed On : <span
-                                                class="each-content"> <%= clinics[i].days + " " %></span></span>
-                                    </div>
-                                </div>
+                            <div class="doc-name">
+                                <span><i class="fas fa-user-nurse clinic-icon"></i> Doctor : <span class="each-content">
+                                        <%= clinics[i].doctor_name %>
+                                    </span>
                             </div>
 
-                        <% } %>
+                            <div class="phone-number">
+                                <span><i class="fas fa-phone clinic-icon"></i> Phone Number : <span
+                                        class="each-content">
+                                        <%= clinics[i].phone_number %>
+                                    </span></span>
+                            </div>
 
+                            <div class="address">
+                                <span><i class="fas fa-clinic-medical clinic-icon"></i> Address : <span
+                                        class="each-content">
+                                        <%= clinics[i].address %>
+                                    </span></span>
+                            </div>
+
+                            <div class="close-day">
+                                <span><i class="fas fa-window-close clinic-icon"></i> Closed On : <span
+                                        class="each-content">
+                                        <%= clinics[i].days + " " %>
+                                    </span>
+                                </span>
+                            </div>
+                        </div>
+
+                        <form action='/clinics/delete/<%= clinics[i]._id %>' method="post">
+
+                            <button type="submit" class="btn">Remove <span class="fas fa-trash-alt"></span></button>
+
+                        </form>
                     </div>
 
-                    <div class="swiper-button-next swiper-button"></div>
-                    <div class="swiper-button-prev swiper-button"></div>
-                    <div class="swiper-pagination swiper-pg-button"></div>
-
-                </div>
+                    <% } %>
 
             </div>
 
@@ -100,14 +102,19 @@
                     </a>
                 </span>
             </div>
-
         </section>
-
-
 
         <script src="./js/swiper-bundle.min.js"></script>
 
         <script>
+
+            const removeItem = (e) => {
+                e.preventDefault()
+                console.log(e)
+                console.log('Clicked')
+            }
+
+
             var swiper = new Swiper(".slide-content", {
                 slidesPerView: 2,
                 spaceBetween: 30,
