--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,35 +19,36 @@
     <!-- SWIPER JS CSS -->
     <link rel="stylesheet" href="./css/swiper-bundle.min.css">
 
-    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Oxygen&family=Prompt:wght@300&display=swap"
-        rel="stylesheet">
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="shortcut icon" type="image/xicon" href="./images/logo-icon.jpg">
 
     
-    <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/navbar.css">
     <link rel="stylesheet" href="./css/review.css">
+    <link rel="stylesheet" href="./css/home.css">
+
 </head>
 
 <body>
     <!-- header section starts -->
+    
     <%- include('../partials/navbar.ejs') -%>
 
     <!-- header section ends -->
-    <!-- ------------------------------------- -->
+
+
 
     <!-- Home section starts -->
     <section class="home" id="home">
+
         <div class="image">
-            <img src="./images/about-img.svg" alt="">
+            <img src="./images/home-intro-img.svg" alt="">
         </div>
 
         <div class="content">
             <h3>Health In Hand</h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum, nulla.</p>
-            <a href="/signup" class="btn" style="font-family: sans-serif;" target="_blank">Register <span
+            <a href="/signup" class="btn" style="font-family: sans-serif;">Sign Up <span
                     class="fas fa-angle-double-right"></span></a>
         </div>
     </section>
