almost done with everything

--- a/partials/about.ejs
+++ b/partials/about.ejs
@@ -10,9 +10,15 @@
 
         <div class="content">
             <h3> We Take Care of Your Good</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, cumque, dicta alias perspiciatis ea
-                vero repellendus culpa ut debitis nisi quam commodi. Vitae porro adipisci facilis ipsam omnis harum
-                soluta!</p>
+            
+            <h5><i class="fas fa-quote-right"></i></h5>
+
+            <p>
+                When your health is our first priority then to take care of your goods is our responsibility. CliniCare
+                brings you an effective management system that stores your documents and details secure.
+            </p>
+
+            <h5><i class="fas fa-quote-left"></i></h5>
 
             <a href="#" class="btn">Learn More <span class="fas fa-angle-double-right"></span></a>
         </div>
