--- a/partials/navbar.ejs
+++ b/partials/navbar.ejs
@@ -12,8 +12,9 @@
         <ul class="nav-links">
             <i class="fas fa-times-circle navCloseBtn"></i>
             <li><a href="#">Home</a></li>
-            <li><a href="#services">Services</a></li>
+            <li><a href="#services">Features</a></li>
             <li><a href="#about">About</a></li>
+            <li><a href="#reviews">Reviews</a></li>
             <li><a href="#contact">Contact Us</a></li>
         </ul>
 
