--- a/partials/review.ejs
+++ b/partials/review.ejs
@@ -10,50 +10,8 @@
             <div class="swiper-wrapper card-wrapper box-container">
 
                 <div class="swiper-slide box">
-                    <!-- <img src="./images/4990224.jpg" alt=""> -->
 
-                    <h3> Rajdeep Mallick </h3>
-
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
-                    </div>
-
-                    <div class="text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam sapiente nihil
-                        aperiam? Repellat sequi nisi aliquid perspiciatis libero nobis rem numquam nesciunt alias
-                        sapiente
-                        minus voluptatem, reiciendis consequuntur optio dolorem!
-                    </div>
-                </div>
-
-                <div class="swiper-slide box">
-                    <!-- <img src="./images/4990224.jpg" alt=""> -->
-
-                    <h3> Rajdeep Mallick </h3>
-
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star-half-alt"></i>
-                    </div>
-
-                    <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam sapiente nihil
-                        aperiam? Repellat sequi nisi aliquid perspiciatis libero nobis rem numquam nesciunt alias
-                        sapiente
-                        minus voluptatem, reiciendis consequuntur optio dolorem!</div>
-                </div>
-
-
-                <div class="swiper-slide box">
-                    <!-- <img src="./images/4990224.jpg" alt=""> -->
-
-                    <h3> Rajdeep Mallick </h3>
+                    <h3> Arindam Halder </h3>
 
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -64,17 +22,15 @@
                     </div>
 
                     <div class="text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam sapiente nihil
-                        aperiam? Repellat sequi nisi aliquid perspiciatis libero nobis rem numquam nesciunt alias
-                        sapiente
-                        minus voluptatem, reiciendis consequuntur optio dolorem!
+                        Clinicare is the best solution for my medical details store. This is a real problem that I was
+                        going with and it helped me to solve it. Now I don't have to remember anything and I can manage
+                        all effectively.
                     </div>
                 </div>
 
                 <div class="swiper-slide box">
-                    <!-- <img src="./images/4990224.jpg" alt=""> -->
 
-                    <h3> Rajdeep Mallick </h3>
+                    <h3>Sanghita Gharami</h3>
 
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -85,17 +41,49 @@
                     </div>
 
                     <div class="text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam sapiente nihil
-                        aperiam? Repellat sequi nisi aliquid perspiciatis libero nobis rem numquam nesciunt alias
-                        sapiente
-                        minus voluptatem, reiciendis consequuntur optio dolorem!
+                        It is awesome when you don't have to do anything but the app does everything for you. Thank you
+                        to CliniCare for providing such solution.
+                    </div>
+                </div>
+
+
+                <div class="swiper-slide box">
+
+                    <h3> Isika Samanta </h3>
+
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+
+                    <div class="text">
+                        I was searching for this from a long time for my family members. I have registered for each and
+                        every member of my family. It is an awesome solutions. Cheers !!!
                     </div>
                 </div>
 
                 <div class="swiper-slide box">
-                    <!-- <img src="./images/4990224.jpg" alt=""> -->
 
-                    <h3> Rajdeep Mallick </h3>
+                    <h3> Dibyabrata Panja </h3>
+
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+
+                    <div class="text">
+                        CliniCare in one word "Awesome". It is a solution for many people like me who often forgets
+                        where they kept their prescriptions of previously visited clinics. Thanks to CliniCare for that.
+                    </div>
+                </div>
+
+                <div class="swiper-slide box">
+
+                    <h3> Arup Kumar Roy </h3>
 
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -106,10 +94,26 @@
                     </div>
 
                     <div class="text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam sapiente nihil
-                        aperiam? Repellat sequi nisi aliquid perspiciatis libero nobis rem numquam nesciunt alias
-                        sapiente
-                        minus voluptatem, reiciendis consequuntur optio dolorem!
+                        Clinicare is the solution I was searching. This is a real problem that I was
+                        going with and it helped me to solve it. Now I don't have to remember anything and I can manage
+                        all effectively.
+                    </div>
+                </div>
+
+                <div class="swiper-slide box">
+
+                    <h3> Souvik Naskar </h3>
+
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+
+                    <div class="text">
+                        Clinicare is one of the best solutions out there for my medical details. This is a problem that I was
+                        sufferting with and this application helped me to solve it.
                     </div>
                 </div>
 
