--- a/partials/services.ejs
+++ b/partials/services.ejs
@@ -1,7 +1,7 @@
 <!-- Services section -->
 <section class="services" id="services">
 
-    <h1 class="heading">Our <span>Services</span></h1>
+    <h1 class="heading">Fea<span>tures</span></h1>
 
     <div class="box-container">
 
@@ -9,12 +9,15 @@
 
             <div class="service-content-heading">
                 <i class="fas fa-calendar-plus"></i>
-                <h3>Appointments</h3>
+                <h3>Prescription Management</h3>
             </div>
 
             <div class="service-content-description">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, ab.</p>
-                <a href="#" class="btn">Learn More <span class="fas fa-angle-double-right"></span></a>
+                <p>
+                    We manage your prescription in the most effective manner so that you get a good experience while
+                    using the application.
+                </p>
+                <a href="/presmanage" class="btn">Learn More <span class="fas fa-angle-double-right"></span></a>
             </div>
 
         </div>
@@ -23,12 +26,12 @@
 
             <div class="service-content-heading">
                 <i class="fas fa-file-medical"></i>
-                <h3>Prescription Management</h3>
+                <h3>Clinics Management</h3>
             </div>
 
             <div class="service-content-description">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, ab.</p>
-                <a href="#" class="btn">Learn More <span class="fas fa-angle-double-right"></span></a>
+                <p>User can store the details of the clinics they visit so that when needed it comes handy.</p>
+                <a href="/clinicmanage" class="btn">Learn More <span class="fas fa-angle-double-right"></span></a>
             </div>
         </div>
 
@@ -40,8 +43,8 @@
             </div>
 
             <div class="service-content-description">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, ab.</p>
-                <a href="#" class="btn">Learn More <span class="fas fa-angle-double-right"></span></a>
+                <p>User will be able to store the medicine details so that they don't have to remember anymore.</p>
+                <a href="/medilist" class="btn">Learn More <span class="fas fa-angle-double-right"></span></a>
             </div>
         </div>
 
