--- a/views/static/page404.ejs
+++ b/views/static/page404.ejs
@@ -12,14 +12,14 @@
 
 
     <link rel="stylesheet" href="./css/button.css">
-    <link rel="stylesheet" href="./css/page404.css">
+    <link rel="stylesheet" href="./css/static-pages.css">
 </head>
 <body>
     
     <div class="container">
 
         <div class="image">
-            <img src="./images/wrong-details.svg" alt="wrong">
+            <img src=".././images/wrong-details.svg" alt="wrong">
         </div>
 
         <div class="description">
