--- a/views/static/pres-manage.ejs
+++ b/views/static/pres-manage.ejs
@@ -5,29 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Not Found</title>
+    <title>Prescription Management</title>
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 
     <link rel="stylesheet" href="./css/button.css">
-    <link rel="stylesheet" href="./css/error.css">
+    <link rel="stylesheet" href="./css/static-pages.css">
 </head>
 <body>
     
     <div class="container">
 
         <div class="image">
-            <img src="./images/not-found.svg" alt="notfound">
+            <img src=".././images/pres-manage.svg" alt="wrong">
         </div>
 
         <div class="description">
 
-            <h1 style="color: white;"><%= reason %></h1>
-            <p style="color: white">Fall back to safe zone... 😥😥😰😰</p>
+            <h1 style="color: white;">🌟 Prescription Management 🌟</h1>
+            <p style="color: white">Using a superfast database that stores as well as shows faster than any database❤️</p>
 
-            <a class="btn" href="/">Return back <span class="fas fa-arrow-left"></span> </a>
+            <a class="btn" href="/#services">Go back <span class="fas fa-arrow-left"></span> </a>
         </div>
 
     </div>
