--- a/partials/contact.ejs
+++ b/partials/contact.ejs
@@ -5,34 +5,32 @@
         <div class="box">
             <h3>Quick Links</h3>
             <a href="#"> <i class="fas fa-chevron-right"></i> Home </a>
+            <a href="#services"> <i class="fas fa-chevron-right"></i> Features </a>
             <a href="#about"> <i class="fas fa-chevron-right"></i> About Us </a>
-            <a href="#services"> <i class="fas fa-chevron-right"></i> Services </a>
-            <a href="#contact"> <i class="fas fa-chevron-right"></i> Contact Us </a>
+            <a href="#reviews"> <i class="fas fa-chevron-right"></i> Reviews </a>
             <a href="/signup" target="_blank"> <i class="fas fa-chevron-right"></i> Sign Up </a>
         </div>
 
         <div class="box">
             <h3>Our Services</h3>
-            <a href="#"> <i class="fas fa-chevron-right"></i> Appointments </a>
-            <a href="#"> <i class="fas fa-chevron-right"></i> Prescription Management </a>
-            <a href="#"> <i class="fas fa-chevron-right"></i> Medicines List </a>
+            <a href="/presmanage"> <i class="fas fa-chevron-right"></i> Prescription Management </a>
+            <a href="/clinicmanage"> <i class="fas fa-chevron-right"></i> Clinics Management </a>
+            <a href="/medilist"> <i class="fas fa-chevron-right"></i> Medicines List </a>
         </div>
 
         <div class="box">
             <h3>Contact Info</h3>
             <a href="#"> <i class="fas fa-phone"></i> +123-456-7890 </a>
             <a href="#"> <i class="fas fa-phone"></i> +111-222-3333 </a>
-            <a href="#"> <i class="fas fa-envelope"></i> clinicareAdmin@gmail.com </a>
             <a href="#"> <i class="fas fa-envelope"></i> clinicare@gmail.com </a>
             <a href="#"> <i class="fas fa-map-marker-alt"></i> Kolkata, India - 700 001 </a>
         </div>
 
         <div class="box">
             <h3>Follow Us</h3>
-            <a href="#"> <i class="fab fa-facebook-f"></i> Facebook </a>
-            <a href="#"> <i class="fab fa-twitter"></i> Twitter </a>
-            <a href="#"> <i class="fab fa-instagram"></i> Instagram </a>
-            <a href="#"> <i class="fab fa-linkedin"></i> Linkedin </a>
+            <a href="https://www.instagram.com/rajdeepmallick010"> <i class="fab fa-instagram"></i> Instagram </a>
+            <a href="https://www.linkedin.com/in/rajdeep-mallick-6477381b4/"> <i class="fab fa-linkedin"></i> Linkedin </a>
+            <a href="https://github.com/rajdeep010"> <i class="fab fa-github"></i> Github </a>
         </div>
 
     </div>
