--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -33,32 +33,15 @@
 
                     <div class="input-field">
                         <i class="fas fa-user"></i>
-                        <input type="email" placeholder="Email" name="email"/>
+                        <input type="email" placeholder="Email" name="email" />
                     </div>
 
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
-                        <input type="password" placeholder="Password" name="password"/>
+                        <input type="password" placeholder="Password" name="password" />
                     </div>
 
                     <button type="submit" class="btn">Sign In <span class="fas fa-angle-double-right"></span></button>
-
-                    <p class="social-text">Or Sign in with social platforms</p>
-
-                    <div class="social-media">
-                        <a href="#" class="social-icon">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
-                        <a href="#" class="social-icon">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a href="#" class="social-icon">
-                            <i class="fab fa-google"></i>
-                        </a>
-                        <a href="#" class="social-icon">
-                            <i class="fab fa-linkedin-in"></i>
-                        </a>
-                    </div>
 
                 </form>
 
@@ -72,42 +55,26 @@
 
                     <div class="input-field">
                         <i class="fas fa-user"></i>
-                        <input type="text" placeholder="Username" name="username"/>
+                        <input type="text" placeholder="Username" name="username" />
                     </div>
 
                     <div class="input-field">
                         <i class="fas fa-envelope"></i>
-                        <input type="email" placeholder="Email" name="email"/>
+                        <input type="email" placeholder="Email" name="email" />
                     </div>
 
                     <div class="input-field">
                         <i class="fas fa-lock"></i>
-                        <input type="password" placeholder="Password" name="password"/>
+                        <input type="password" placeholder="Password" name="password" />
                     </div>
 
                     <div class="input-field">
                         <i class="fas fa-user-check"></i>
-                        <input type="password" placeholder="Confirm Password" name="confirmpassword"/>
+                        <input type="password" placeholder="Confirm Password" name="confirmpassword" />
                     </div>
 
                     <button type="submit" class="btn">Sign Up <span class="fas fa-angle-double-right"></span></button>
 
-                    <p class="social-text">Or Sign up with social platforms</p>
-
-                    <div class="social-media">
-                        <a href="#" class="social-icon">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
-                        <a href="#" class="social-icon">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a href="#" class="social-icon">
-                            <i class="fab fa-google"></i>
-                        </a>
-                        <a href="#" class="social-icon">
-                            <i class="fab fa-linkedin-in"></i>
-                        </a>
-                    </div>
                 </form>
             </div>
         </div>
@@ -120,8 +87,7 @@
 
                     <h3>New here ?</h3>
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis,
-                        ex ratione. Aliquid!
+                        If you are a new user then please first Sign up by pressing the button below and fill the details.
                     </p>
 
                     <button class="btn2 btn transparent" id="sign-up-btn">
@@ -129,7 +95,6 @@
                     </button>
 
                 </div>
-                <img src="#" class="image" alt="" />
 
             </div>
 
@@ -139,8 +104,7 @@
                 <div class="content">
                     <h3>One of us ?</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
-                        laboriosam ad deleniti.
+                        If you already a member of our family then press the button below and Sign in to your account.
                     </p>
                     <button class="btn2 btn transparent" id="sign-in-btn">
                         Sign in <span class="fas fa-angle-double-right"></span>
@@ -148,7 +112,6 @@
 
                 </div>
 
-                <img src="img/register.svg" class="image" alt="" />
             </div>
         </div>
     </div>
