some more events added

--- a/public/css/clinics.css
+++ b/public/css/clinics.css
@@ -40,6 +40,10 @@ section:nth-child(even) {
     color: var(--blue);
 }
 
+#clinic-image{
+    margin-left: 2rem;
+}
+
 /* ------ Clinics Section ---- */
 .clinics{
     display: flex;
