--- a/views/clinics.ejs
+++ b/views/clinics.ejs
@@ -94,8 +94,8 @@
                 <img src="./images/add files.svg" alt="">
 
                 <span>
-                    <a href="/clinicadd" target="_blank">
-                        <button class="btn">
+                    <a href="/clinicadd">
+                        <button class="btn addclinicbtn">
                             Add New Clinic <span class="fas fa-angle-double-right"></span>
                         </button>
                     </a>
