--- a/public/css/clinicadd.css
+++ b/public/css/clinicadd.css
@@ -24,6 +24,26 @@ section{
     padding: 2rem 5%;
 }
 
+.colored-toast.swal2-icon-success {
+    background-color: var(--blue) !important;
+}
+
+.swal2-styled.swal2-confirm {
+    background-color: var(--blue) !important;
+}
+
+.colored-toast .swal2-title {
+    color: white;
+}
+
+.colored-toast .swal2-close {
+    color: white;
+}
+
+.colored-toast .swal2-html-container {
+    color: white;
+}
+
 
 /* ----****** Ultimate CSS starts now *****---- */
 
