--- a/public/css/docadd.css
+++ b/public/css/docadd.css
@@ -29,6 +29,27 @@ section:nth-child(odd){
     background: #ebe6f8;
 }
 
+.colored-toast.swal2-icon-success {
+    background-color: var(--blue) !important;
+}
+
+.swal2-styled.swal2-confirm {
+    background-color: var(--blue) !important;
+}
+
+.colored-toast .swal2-title {
+    color: white;
+}
+
+.colored-toast .swal2-close {
+    color: white;
+}
+
+.colored-toast .swal2-html-container {
+    color: white;
+}
+
+
 /* ----****** Ultimate CSS starts now *****---- */
 
 .heading{
