--- a/views/clinicadd.ejs
+++ b/views/clinicadd.ejs
@@ -15,6 +15,8 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
+    <!-- SWEET ALERT STYLE SHEET -->
+    <link rel="stylesheet" href="sweetalert2.min.css">
 
     <!-- Some specific CSS for stylings -->
     <link rel="stylesheet" href="./css/navbar.css">
@@ -35,7 +37,7 @@
 
             <div class="row">
 
-                <form action="/clinicadd" method="POST">
+                <form action="/clinicadd" method="POST" onsubmit="firemsg()">
 
                     <h3 class="heading close-day-heading">
                         <i class="fas fa-pen-alt"></i>
@@ -90,12 +92,45 @@
                         </div>
                     </div>
 
-                    <button type="submit" class="btn">Submit <span class="fas fa-angle-double-right"></span></button>
+                    <button type="submit" class="btn" onclick="firemsg()">Submit <span
+                            class="fas fa-angle-double-right"></span></button>
 
                 </form>
             </div>
 
         </section>
+
+        <!-- Sweet Alert CDN -->
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <script src="sweetalert2.min.js"></script>
+
+        <script>
+
+            const Toast = Swal.mixin({
+                toast: true,
+                iconColor: 'white',
+                position: 'top-end',
+                showConfirmButton: false,
+                customClass: {
+                    popup: 'colored-toast'
+                },
+                timer: 5000,
+                timerProgressBar: true,
+                didOpen: (toast) => {
+                    toast.addEventListener('mouseenter', Swal.stopTimer)
+                    toast.addEventListener('mouseleave', Swal.resumeTimer)
+                }
+            })
+
+            const firemsg = () => {
+
+                Toast.fire({
+                    icon: 'success',
+                    title: 'Added successfully'
+                })
+            }
+
+        </script>
 
 </body>
 
