--- a/views/docadd.ejs
+++ b/views/docadd.ejs
@@ -15,6 +15,8 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
+    <!-- SWEET ALERT STYLE SHEET -->
+    <link rel="stylesheet" href="sweetalert2.min.css">
 
 
     <link rel="stylesheet" href="./css/docadd.css">
@@ -33,7 +35,7 @@
 
             <div class="row">
 
-                <form action="/docadd" method="post" id="docForm" enctype="multipart/form-data">
+                <form action="/docadd" method="post" id="docForm" onsubmit="firemsg()" enctype="multipart/form-data">
 
                     <h3 class="heading">Enter Docu<span>ment Details</span></h3>
 
@@ -43,7 +45,8 @@
                     <textarea name="description" cols="30" rows="5" class="box"
                         placeholder="Enter description of document"></textarea>
 
-                    <input type="file" name="Prescription" placeholder="Choose Your File" class="box boxfill fileInput" accept="image/*">
+                    <input type="file" name="Prescription" placeholder="Choose Your File" class="box boxfill fileInput"
+                        accept="image/*">
 
                     <button type="submit" class="btn">Submit <span class="fas fa-angle-double-right"></span></button>
 
@@ -54,9 +57,35 @@
         </section>
 
 
+        <!-- Sweet Alert CDN -->
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <script src="sweetalert2.min.js"></script>
+
         <script>
 
+            const Toast = Swal.mixin({
+                toast: true,
+                iconColor: 'white',
+                position: 'top-end',
+                showConfirmButton: false,
+                customClass: {
+                    popup: 'colored-toast'
+                },
+                timer: 3500,
+                timerProgressBar: true,
+                didOpen: (toast) => {
+                    toast.addEventListener('mouseenter', Swal.stopTimer)
+                    toast.addEventListener('mouseleave', Swal.resumeTimer)
+                }
+            })
 
+            const firemsg = () => {
+
+                Toast.fire({
+                    icon: 'success',
+                    title: 'Added successfully'
+                })
+            }
 
         </script>
 </body>
