Deployment Successful and stylings updated

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -50,13 +50,7 @@
 
 @media screen and (max-width: 1160px) {
     .nav {
-        padding: 1.5rem;
-    }
-}
-
-@media screen and (max-width: 950px) {
-    .nav {
-        padding: 1rem;
+        padding: 0.5rem 0.8rem;
     }
 }
 
