--- a/views/clinicadd.ejs
+++ b/views/clinicadd.ejs
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Clinic</title>
 
-    <link rel="shortcut icon" type="image/xicon" href="./images/logo-modified.png">
+    <link rel="icon" type="image/x-icon" href="./images/clinicare-icon.png">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Oxygen&family=Prompt:wght@300&display=swap"
