--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -9,7 +9,7 @@
 
     <title>Dashboard</title>
 
-    
+    <link rel="icon" type="image/x-icon" href="./images/clinicare-icon.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
