--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,6 +9,7 @@
 
     <title>CliniCare</title>
 
+    <link rel="icon" type="image/x-icon" href="./images/clinicare-icon.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
