--- a/views/static/idea-stage.ejs
+++ b/views/static/idea-stage.ejs
@@ -8,6 +8,9 @@
     <title>Medicine List</title>
 
 
+    <link rel="icon" type="image/x-icon" href="./images/clinicare-icon.png">
+
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 
