--- a/views/static/page404.ejs
+++ b/views/static/page404.ejs
@@ -7,6 +7,8 @@
 
     <title>Wrong Details</title>
 
+    <link rel="icon" type="image/x-icon" href="./images/clinicare-icon.png">
+
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
