more routes are handled and css added

--- a/partials/about.ejs
+++ b/partials/about.ejs
@@ -20,7 +20,7 @@
 
             <h5><i class="fas fa-quote-left"></i></h5>
 
-            <a href="#" class="btn">Learn More <span class="fas fa-angle-double-right"></span></a>
+            <a href="/family" class="btn">Learn More <span class="fas fa-angle-double-right"></span></a>
         </div>
     </div>
 </section>
