Another route handled. Done probably

--- a/views/static/taking-care-good.ejs
+++ b/views/static/taking-care-good.ejs
@@ -24,14 +24,14 @@
     <div class="container">
 
         <div class="image">
-            <img src=".././images/idea-stage.svg" alt="wrong">
+            <img src=".././images/care-take-good.svg" alt="wrong">
         </div>
 
         <div class="description">
 
             <h1 style="color: white;">🌟 Clinicare Family 🌟</h1>
             <p style="color: white">❤️ We as a family member take care of your goods. Don't worry with any details you
-                provides to us. ❤️</p>
+                provide. ❤️</p>
 
             <a class="btn" href="/">Home <span class="fas fa-arrow-left"></span> </a>
         </div>
