--- a/partials/review.ejs
+++ b/partials/review.ejs
@@ -30,7 +30,7 @@
 
                 <div class="swiper-slide box">
 
-                    <h3>Sanghita Gharami</h3>
+                    <h3>Sangeeta Roy</h3>
 
                     <div class="stars">
                         <i class="fas fa-star"></i>
